Added Spaces Between

--- a/TipCalculator/TipCalculator/MainPage.xaml
+++ b/TipCalculator/TipCalculator/MainPage.xaml
@@ -1,82 +1,66 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TipCalculator.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="0,0"
-            Spacing="0">
+            Padding="10,0"
+            Spacing="10">
 
             <Label
-                 Text="Bill"
-                 Margin="10"
-                />
+                Text="Tip Value"
+                Style="{StaticResource Headline}"
+                SemanticProperties.HeadingLevel="Level1" />
 
             <Entry
                 x:Name="ValueEntry"
-                Placeholder="Enter Amount"
-                />
-            
-            <Label
-                x:Name="LabelTipValue"
-                Text="Tip"
-                />
-            <Label
-                x:Name="LabelTotalValue"
-                Text="0.00"
-                />
-            <Label
-                x:Name="LabelPercentageValue"
-                Text="Total"
-                />
-            <Label
-                x:Name="result1"
-                Text="0.00"
-                />
-            <Label
-                x:Name="TipPercentage"
-                Text="Tip Percentage"
-                />
-            <Label
-                x:Name="NumBtn"
-                Text="0%"
-                />
-            
+                Placeholder="Digite o valor do pedido"/>
+
+            <HorizontalStackLayout Spacing="10">
+                
+             <Label Text="Tip:"/>
+            <Label Text="0.00" x:Name="LabelTipValue" />
+                
+            </HorizontalStackLayout>
+
+            <Label Text="Total:"/>
+            <Label Text="0.00" x:Name="LabelTotalValue"/>
+
+            <Label Text="Tip Percentage:"/>
+            <Label Text="0%" x:Name="LabelPercentageValue"/>
+
             <Slider
                 x:Name="SliderTipPercent"
                 Minimum="0"
                 Maximum="100"
-                Value="0"
+                ValueChanged="SliderTipPercent_ValueChanged"
+                />
+                
+                <Button
+                x:Name="Button15Percent"
+                Text="15%" 
+                HorizontalOptions="Fill" 
+                Clicked="OnButton15PercentClicked"
                 />
 
             <Button
-                x:Name="Btn15"
-                Text="15%"
+                x:Name="Button20Percent"
+                Text="20%" 
                 HorizontalOptions="Fill"
-                Clicked="OnBtn15Clicked"/>
+                Clicked="OnButton20PercentClicked"/>
+                
+                <Button
+                x:Name="ButtonRoundDown"
+                Text="Arredondar para baixo" 
+                HorizontalOptions="Fill"
+                Clicked="OnButtonRoundDownClicked"/>
 
-
-            <Button 
-                x:Name="Btn20"
-                Text="20%"
+            <Button
+                x:Name="ButtonRoundUp"
+                Text="Arredondar para cima" 
                 HorizontalOptions="Fill"
-                Clicked="OnBtn20Clicked"/>
-           
-            <Button 
-                x:Name="RoundDownBtn"
-                Text="Round Down"
-                HorizontalOptions="Fill"
-                Clicked="OnRoundDownBtnClicked"
-                />
-            
-            <Button 
-                x:Name="RoundUpSBtn"
-                Text="Round Up"
-                HorizontalOptions="Fill"
-                Clicked="OnRoundUpBtnClicked"
-                />
- 
+                Clicked="OnButtonRoundUpClicked"/>
 
         </VerticalStackLayout>
     </ScrollView>
